# cryptobot

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  README.md  docker-compose.yml  justfile  pyrightconfig.json
backend/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_strategy_profiles.py  0002_symbol_manifest_and_data_health.py  0003_create_backtest_runs.py  0004_create_decision_audit_entries.py  0005_create_runner_state.py  0006_drop_orphan_strategy_profile_index.py
backend/app/: config.py  deps.py  logging_config.py  main.py
backend/app/api/: alerts.py  backtests.py  data_health.py  decision_audit.py  exchanges.py  health.py  live.py  metrics.py  oms.py  strategy_profiles.py
backend/app/backtest/: __init__.py  engine.py  fills.py  funding.py  loader.py  metrics.py  orders.py  positions.py  registry.py  runner.py  state.py
backend/app/exchanges/: __init__.py  base.py  binance.py  bybit.py  errors.py  hyperliquid.py  paper.py  types.py
backend/app/market_data/: __init__.py  _http.py  base.py  binance_vision.py  bybit_public.py  duckdb_query.py  hyperliquid_archive.py  parquet_store.py
backend/app/models/: __init__.py  backtest_run.py  base.py  data_health_event.py  decision_audit.py  runner_state.py  strategy_profile.py  symbol_manifest_snapshot.py
backend/app/oms/: __init__.py  exceptions.py  kill_switch.py  ledger.py  reconciler.py  service.py
backend/app/profile/: __init__.py  apply.py  defaults.py  loader.py  params.py
backend/app/repositories/: strategy_profile.py
backend/app/risk/: __init__.py  bayesian_kelly.py  component_graveyard.py  drawdown_brake.py  exceptions.py  ic_tracker.py  sizing.py  vol_estimator.py
backend/app/schemas/: backtest.py  decision_audit.py  exchanges.py  live.py  oms.py  strategy_profile.py
backend/app/services/: alerter.py  backtest_service.py  correlation.py  data_health.py  data_pipeline.py  decision_audit.py  exchange_factory.py  feature_pipeline.py  live_runner.py  live_state_fetcher.py  llm_overlay.py  meta_allocator.py  metrics_collector.py  profile_service.py  runner_state.py  scoring.py  symbol_manifest.py  universe_loader.py  wallet_rotator.py
backend/app/strategies/: __init__.py  base.py  factor_portfolio.py  funding_arb.py
backend/app/strategy_runner/: __init__.py  main.py
backend/scripts/: load_fixtures.py
backend/tests/: conftest.py  test_ast_lint.py  test_config.py  test_end_to_end.py  test_health.py  test_profile_apply.py  test_profile_params.py  test_profile_registry.py  test_profile_schemas.py  test_strategy_runner.py  test_worker.py  test_worker_jobs.py
(+170 files in other folders)
